--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -4,9 +4,14 @@
     "CheckGithub": "Check on Github",
     "ReadMore>>": "Read More>>",
     "MyPersonalPortfolio": "My Personal Portfolio",
-    "MyPersonalDescription": "I'm capable of creating excellent mobile apps, handling every step from concept to deployment.",
+    "MyPersonalDescription": "I'm capable of creating excellent mobile apps,\nhandling every step from concept to deployment.",
     "DownloadCV": "Download CV",
     "Developer": "Developer",
     "Home": "Home",
-    "Certifications": "Certifications"
+    "Certifications": "Certifications",
+    "Achievements": "Achievements",
+    "Contact":"Contact",
+    "Email":"Email",
+    "Skills":"Skills",
+    "FlutterDeveloper":"Flutter Developer \n Software Engineering"
   }
