--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -4,9 +4,14 @@
   "CheckGithub": "Ver en Github",
   "ReadMore>>": "Leer más >>",
   "MyPersonalPortfolio": "Mi Portafolio Personal",
-  "MyPersonalDescription": "Soy capaz de crear excelentes aplicaciones móviles, gestionando cada etapa desde la idea hasta su lanzamiento.",
+  "MyPersonalDescription": "Soy capaz de crear excelentes aplicaciones móviles,\ngestionando cada etapa desde la idea hasta su lanzamiento.",
   "DownloadCV": "Descargar CV",
   "Developer": "Desarrollador",
   "Home": "Inicio",
-  "Certifications": "Certificaciones"
+  "Certifications": "Certificaciones",
+  "Achievements": "Logros",
+  "Contact":"Contacto",
+  "Email":"Correo",
+  "Skills":"Habilidades",
+  "FlutterDeveloper":"Desarrollador de Flutter \n Ingeniero de Software"
 }
